--- a/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
+++ b/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
@@ -2,49 +2,80 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Mde.Mvvm.StudentRoulette.Pages.StudentFormPage"
-             Title="Add friend"
-             Padding="50,25">
+             Title="Add friend">
 
-    <TableView Intent="Form">
-        <TableRoot>
-            <TableSection Title="Personal details">
-                <EntryCell Label="First name" />
-                <EntryCell Label="Middle name" />
-                <EntryCell Label="Last name" />
+    <ScrollView Padding="50,25">
+        <VerticalStackLayout>
 
-                <ViewCell>
-                    <VerticalStackLayout >
-                        <Label FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Text="Date of birth"/>
-                        <DatePicker Grid.Row="0" Grid.Column="1"/>
+            <Label FontAttributes="Bold" FontSize="Title" TextColor="{StaticResource Primary}" Padding="0,14,0,14">Personal details</Label>
+            <Grid ColumnDefinitions="100,*" RowDefinitions="Auto, Auto, Auto, Auto" RowSpacing="14">
+
+                <!--Row 0-->
+                <Label Grid.Row="0" Grid.Column="0" 
+                   Text="First name:"
+                   VerticalTextAlignment="Center" FontAttributes="Italic" />
+                <Entry Grid.Row="0" Grid.Column="1" 
+                   Placeholder="John" />
+
+                <!--Row 1-->
+                <Label Grid.Row="1" Grid.Column="0" 
+                   Text="Middle name:"
+                   VerticalTextAlignment="Center" FontAttributes="Italic" />
+                <Entry Grid.Row="1" Grid.Column="1" 
+                   Placeholder="Deere" />
+
+                <!--Row 2-->
+                <Label Grid.Row="2" Grid.Column="0" 
+                   Text="Last name:"
+                   VerticalTextAlignment="Center" FontAttributes="Italic"/>
+                <Entry Grid.Row="2" Grid.Column="1" 
+                   Placeholder="Doe" />
+
+                <!--Row 3-->
+                <Label Grid.Row="3" Grid.Column="0" 
+                   Text="Birthday:"
+                   VerticalTextAlignment="Center" FontAttributes="Italic"/>
+                <DatePicker Grid.Row="3" Grid.Column="1" />
+            </Grid>
+
+            <Label FontAttributes="Bold" FontSize="Title" TextColor="{StaticResource Primary}" Padding="0,14,0,14">Roulette</Label>
+            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto, Auto" RowSpacing="14">
+
+                <VerticalStackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="Fill">
+                    <Label FontAttributes="Bold" Text="Mantra" HorizontalTextAlignment="Center" />
+                    <Editor HorizontalTextAlignment="Center" HeightRequest="100"
+                                Placeholder="Type the students mantra when being chosen here.&#x0a;E.g.: &quot;I&apos;ve always known I&apos;m the chosen one!&quot;"/>
+                </VerticalStackLayout>
+
+                <VerticalStackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Start">
+                    <Label VerticalTextAlignment="Center" FontAttributes="Italic" 
+                           Text="Times chosen" />
+                    <Entry VerticalTextAlignment="Center" HorizontalTextAlignment="Center" Placeholder="2 (times)" />
+                </VerticalStackLayout>
+
+                <VerticalStackLayout Grid.Row="1" Grid.Column="1">
+                    <Label VerticalTextAlignment="Center" FontAttributes="Italic" Text="Currently present:" HorizontalOptions="End"/>
+                    <CheckBox HorizontalOptions="End"/>
+                </VerticalStackLayout>
+            </Grid>
+
+            <Label FontAttributes="Bold" FontSize="Title" 
+                   TextColor="{StaticResource Primary}" 
+                   Padding="0,14,0,14">Preview</Label>
+
+            <Border Padding="14">
+                <Grid ColumnDefinitions=".9*, .1*" RowDefinitions="Auto">
+                    <VerticalStackLayout Grid.Row="0" Grid.Column="0">
+                        <Label Text="John Deere Doe (picked 2 times)" />
+                        <Label Text="I&apos;ve always known I&apos;m the chosen one!"
+                           FontAttributes="Italic" FontSize="10" TextColor="{StaticResource Tertiary}"/>
                     </VerticalStackLayout>
-                </ViewCell>
-            </TableSection>
-
-        
-            <TableSection Title="Roulette">
-                
-
-                <ViewCell>
-                    <Border Padding="25,25">
-                        <Grid ColumnDefinitions="*,*,*" RowDefinitions="150">
-                            <VerticalStackLayout Grid.Row="0" Grid.Column="0" HorizontalOptions="Start">
-                                <Label FontAttributes="Bold" Text="Times chosen"/>
-                                <Entry VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                            </VerticalStackLayout>
-
-                            <VerticalStackLayout Grid.Row="0" Grid.Column="1" HorizontalOptions="Center">
-                                <Label FontAttributes="Bold" Text="Mantra" HorizontalTextAlignment="Center" />
-                                <Editor VerticalTextAlignment="Center" HorizontalTextAlignment="Center" MinimumWidthRequest="300" HeightRequest="100"/>
-                            </VerticalStackLayout>
-    
-                            <VerticalStackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="End">
-                                <Label FontAttributes="Bold" Text="Currently present" />
-                            <Switch />
-                        </VerticalStackLayout>
-                        </Grid>
-                    </Border>
-                </ViewCell>
-            </TableSection>
-        </TableRoot>
-    </TableView>
+                    <BoxView Grid.Row="0" Grid.Column="1"
+                             WidthRequest="20" HeightRequest="20"
+                             VerticalOptions="Center" HorizontalOptions="Center"
+                             CornerRadius="50" Color="Green"></BoxView>
+                </Grid>
+            </Border>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
