--- a/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
+++ b/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
@@ -4,78 +4,67 @@
              x:Class="Mde.Mvvm.StudentRoulette.Pages.StudentFormPage"
              Title="Add friend">
 
-    <ScrollView Padding="50,25">
+    <ScrollView>
         <VerticalStackLayout>
-
-            <Label FontAttributes="Bold" FontSize="Title" TextColor="{StaticResource Primary}" Padding="0,14,0,14">Personal details</Label>
-            <Grid ColumnDefinitions="100,*" RowDefinitions="Auto, Auto, Auto, Auto" RowSpacing="14">
-
-                <!--Row 0-->
-                <Label Grid.Row="0" Grid.Column="0" 
-                   Text="First name:"
-                   VerticalTextAlignment="Center" FontAttributes="Italic" />
-                <Entry Grid.Row="0" Grid.Column="1" 
-                   Placeholder="John" />
-
-                <!--Row 1-->
-                <Label Grid.Row="1" Grid.Column="0" 
-                   Text="Middle name:"
-                   VerticalTextAlignment="Center" FontAttributes="Italic" />
-                <Entry Grid.Row="1" Grid.Column="1" 
-                   Placeholder="Deere" />
-
-                <!--Row 2-->
-                <Label Grid.Row="2" Grid.Column="0" 
-                   Text="Last name:"
-                   VerticalTextAlignment="Center" FontAttributes="Italic"/>
-                <Entry Grid.Row="2" Grid.Column="1" 
-                   Placeholder="Doe" />
-
-                <!--Row 3-->
-                <Label Grid.Row="3" Grid.Column="0" 
-                   Text="Birthday:"
-                   VerticalTextAlignment="Center" FontAttributes="Italic"/>
-                <DatePicker Grid.Row="3" Grid.Column="1" />
-            </Grid>
-
-            <Label FontAttributes="Bold" FontSize="Title" TextColor="{StaticResource Primary}" Padding="0,14,0,14">Roulette</Label>
-            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto, Auto" RowSpacing="14">
-
-                <VerticalStackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="Fill">
-                    <Label FontAttributes="Bold" Text="Mantra" HorizontalTextAlignment="Center" />
-                    <Editor HorizontalTextAlignment="Center" HeightRequest="100"
-                                Placeholder="Type the students mantra when being chosen here.&#x0a;E.g.: &quot;I&apos;ve always known I&apos;m the chosen one!&quot;"/>
-                </VerticalStackLayout>
-
-                <VerticalStackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Start">
-                    <Label VerticalTextAlignment="Center" FontAttributes="Italic" 
-                           Text="Times chosen" />
-                    <Entry VerticalTextAlignment="Center" HorizontalTextAlignment="Center" Placeholder="2 (times)" />
-                </VerticalStackLayout>
-
-                <VerticalStackLayout Grid.Row="1" Grid.Column="1">
-                    <Label VerticalTextAlignment="Center" FontAttributes="Italic" Text="Currently present:" HorizontalOptions="End"/>
-                    <CheckBox HorizontalOptions="End"/>
-                </VerticalStackLayout>
-            </Grid>
-
-            <Label FontAttributes="Bold" FontSize="Title" 
-                   TextColor="{StaticResource Primary}" 
-                   Padding="0,14,0,14">Preview</Label>
-
-            <Border Padding="14">
+            <Border>
                 <Grid ColumnDefinitions=".9*, .1*" RowDefinitions="Auto">
                     <VerticalStackLayout Grid.Row="0" Grid.Column="0">
                         <Label Text="John Deere Doe (picked 2 times)" />
-                        <Label Text="I&apos;ve always known I&apos;m the chosen one!"
-                           FontAttributes="Italic" FontSize="10" TextColor="{StaticResource Tertiary}"/>
+                        <Label Style="{StaticResource Accent}"
+                               Text="I&apos;ve always known I&apos;m the chosen one!" />
                     </VerticalStackLayout>
                     <BoxView Grid.Row="0" Grid.Column="1"
-                             WidthRequest="20" HeightRequest="20"
-                             VerticalOptions="Center" HorizontalOptions="Center"
-                             CornerRadius="50" Color="Green"></BoxView>
+                             Style="{StaticResource StatusIndicator}" 
+                             Color="Green"></BoxView>
                 </Grid>
             </Border>
+
+            <Label Style="{StaticResource TitleStyle}">Personal details</Label>
+            <Grid ColumnDefinitions="100,*" RowDefinitions="Auto, Auto, Auto, Auto">
+
+                <Label Grid.Row="0" Grid.Column="0" 
+                       Text="First name:"
+                   Style="{StaticResource FormLabelLeft}" />
+                <Entry Grid.Row="0" Grid.Column="1" 
+                       Placeholder="John" />
+
+                <Label Text="Middle name:"
+                       Style="{StaticResource FormLabelLeft}" 
+                       Grid.Row="1" Grid.Column="0" />
+                <Entry Grid.Row="1" Grid.Column="1" 
+                       Placeholder="Deere" />
+                
+                <Label Text="Last name:"
+                       Grid.Row="2" Grid.Column="0" 
+                       Style="{StaticResource FormLabelLeft}" />
+                <Entry Grid.Row="2" Grid.Column="1" 
+                       Placeholder="Doe" />
+
+                <Label Text="Birthday:"
+                       Style="{StaticResource FormLabelLeft}"
+                       Grid.Row="3" Grid.Column="0" />
+                <DatePicker Grid.Row="3" Grid.Column="1" />
+            </Grid>
+
+            <Label Style="{StaticResource TitleStyle}">Roulette</Label>
+            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto, Auto">
+
+                <VerticalStackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+                    <Label Text="Mantra:" Style="{StaticResource FormLabelTop}" />
+                    <Editor HorizontalTextAlignment="Center" HeightRequest="100"
+                            Placeholder="Type the students mantra when being chosen here.&#x0a;E.g.: &quot;I&apos;ve always known I&apos;m the chosen one!&quot;"/>
+                </VerticalStackLayout>
+
+                <VerticalStackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Start">
+                    <Label Text="Times chosen:" Style="{StaticResource FormLabelLeft}" />
+                    <Entry HorizontalTextAlignment="Center" Placeholder="2 (times)" />
+                </VerticalStackLayout>
+
+                <VerticalStackLayout Grid.Row="1" Grid.Column="1">
+                    <Label Text="Currently present:" Style="{StaticResource FormLabelRight}" />
+                    <CheckBox HorizontalOptions="End"/>
+                </VerticalStackLayout>
+            </Grid>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
