--- a/Mde.Mvvm.StudentRoulette/Resources/Styles/Styles.xaml
+++ b/Mde.Mvvm.StudentRoulette/Resources/Styles/Styles.xaml
@@ -4,12 +4,15 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
+    <x:Double  x:Key="DefaultSpacing">14</x:Double>
+    <Thickness x:Key="DefaultThickness">14</Thickness>
+    
     <Style TargetType="Grid">
-        <Setter Property="RowSpacing" Value="14"></Setter>
+        <Setter Property="RowSpacing" Value="{StaticResource DefaultSpacing}"></Setter>
     </Style>
 
     <Style TargetType="ScrollView">
-        <Setter Property="Padding" Value="56, 28"></Setter>
+        <Setter Property="Padding" Value="{StaticResource DefaultThickness}"></Setter>
     </Style>
     
     <Style x:Key="FormLabelLeft" TargetType="Label">
@@ -46,7 +49,7 @@
     <Style x:Key="TitleStyle" TargetType="Label">
         <Setter Property="FontAttributes" Value="Bold"></Setter>
         <Setter Property="FontSize" Value="Title"></Setter>
-        <Setter Property="Padding" Value="0,14,0,14"></Setter>
+        <Setter Property="Padding" Value="0,14"></Setter>
         <Setter Property="TextColor" Value="{StaticResource Primary}"></Setter>
     </Style>
 
@@ -60,7 +63,7 @@
     </Style>
 
     <Style TargetType="Border">
-        <Setter Property="Padding" Value="14"></Setter>
+        <Setter Property="Padding" Value="{StaticResource DefaultThickness}"></Setter>
         <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="StrokeShape" Value="Rectangle"/>
         <Setter Property="StrokeThickness" Value="1"/>
