--- a/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
+++ b/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Mde.Mvvm.StudentRoulette.Pages.StudentFormPage"
+             xmlns:viewmodels="clr-namespace:Mde.Mvvm.StudentRoulette.ViewModels"
+             x:DataType="viewmodels:StudentFormViewModel"
              Title="Add friend">
 
     <ContentPage.ToolbarItems>
@@ -18,12 +20,15 @@
                     <VerticalStackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
                         <Label Text="mantra" Style="{StaticResource FormLabelTop}" />
                         <Editor HorizontalTextAlignment="Center" HeightRequest="75"
-                            Placeholder="Type the students mantra when being chosen here. E.g.: &quot;I&apos;ve always known I&apos;m the chosen one!&quot;"/>
+                                Text="{Binding Mantra}"
+                                Placeholder="Type the students mantra when being chosen here. E.g.: &quot;I&apos;ve always known I&apos;m the chosen one!&quot;"/>
                     </VerticalStackLayout>
 
                     <VerticalStackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Start">
                         <Label Text="times chosen" Style="{StaticResource FormLabelLeft}" />
-                        <Entry HorizontalTextAlignment="Center" Placeholder="2 (times)" />
+                        <Entry HorizontalTextAlignment="Center" Placeholder="2 (times)"
+                               Text="{Binding NumberOfTimesChosen}"
+                               Keyboard="Numeric" />
                     </VerticalStackLayout>
 
                     <VerticalStackLayout Grid.Row="1" Grid.Column="1">
@@ -36,22 +41,26 @@
                 <Grid ColumnDefinitions="100,*" RowDefinitions="Auto, Auto, Auto, Auto">
 
                     <Label Grid.Row="0" Grid.Column="0" 
-                       Text="first name"
-                   Style="{StaticResource FormLabelLeft}" />
+                           Text="first name"
+                           Style="{StaticResource FormLabelLeft}" />
                     <Entry Grid.Row="0" Grid.Column="1"
-                       Placeholder="John" />
+                           Placeholder="John"
+                           Text="{Binding FirstName}" />
 
                     <Label Text="middle name"
-                       Style="{StaticResource FormLabelLeft}" 
-                       Grid.Row="1" Grid.Column="0" />
+                           Style="{StaticResource FormLabelLeft}" 
+                           Grid.Row="1" Grid.Column="0" />
                     <Entry Grid.Row="1" Grid.Column="1"
-                       Placeholder="Deere" />
+                           Placeholder="Deere"
+                           Text="{Binding MiddleName}" />
 
                     <Label Text="last name"
-                       Grid.Row="2" Grid.Column="0" 
-                       Style="{StaticResource FormLabelLeft}" />
+                           Grid.Row="2" Grid.Column="0" 
+                           Style="{StaticResource FormLabelLeft}"
+                           />
                     <Entry Grid.Row="2" Grid.Column="1" 
-                       Placeholder="Doe" />
+                           Placeholder="Doe"
+                           Text="{Binding LastName}"/>
 
                     <Label Text="birthday"
                        Style="{StaticResource FormLabelLeft}"
@@ -65,9 +74,16 @@
             <Label TextColor="{StaticResource Tertiary}" FontAttributes="Bold">Preview</Label>
             <Grid  ColumnDefinitions=".8*, .2*" RowDefinitions="Auto">
                 <VerticalStackLayout Grid.Row="0" Grid.Column="0">
-                    <Label Text="John Deere Doe (picked 2 times)" />
+                    <Label>
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="{Binding FullName}"></Span>
+                                <Span Text="{Binding NumberOfTimesChosen}"></Span>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
                     <Label Style="{StaticResource Accent}"
-                           Text="I&apos;ve always known I&apos;m the chosen one!" />
+                           Text="{Binding Mantra}" />
                 </VerticalStackLayout>
                 <BoxView Grid.Row="0" Grid.Column="1"
                          Style="{StaticResource StatusIndicator}" 
