--- a/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
+++ b/Mde.Mvvm.StudentRoulette/Pages/StudentFormPage.xaml
@@ -13,7 +13,7 @@
             <Grid  ColumnDefinitions="40, *" RowDefinitions="Auto">
                 <BoxView Grid.Row="0" Grid.Column="0"
                          Style="{StaticResource StatusIndicator}" 
-                         Color="Green"
+                         Color="{Binding IsPresent, Converter={StaticResource BoolToPresenceConverter}}"
                          HorizontalOptions="Start"></BoxView>
                 <VerticalStackLayout Grid.Row="0" Grid.Column="1">
                     <Label>
@@ -53,7 +53,7 @@
 
                     <VerticalStackLayout Grid.Row="1" Grid.Column="1">
                         <Label Text="currently present" Style="{StaticResource FormLabelRight}" />
-                        <CheckBox IsChecked="True" HorizontalOptions="End"/>
+                        <CheckBox IsChecked="{Binding IsPresent}" HorizontalOptions="End"/>
                     </VerticalStackLayout>
                 </Grid>
 
