--- a/Mde.Mvvm.StudentRoulette/Resources/Styles/Converters.xaml
+++ b/Mde.Mvvm.StudentRoulette/Resources/Styles/Converters.xaml
@@ -6,5 +6,6 @@
     xmlns:converters="clr-namespace:Mde.Mvvm.StudentRoulette.Converters">
 
     <converters:BoolToPresenceConverter x:Key="BoolToPresenceConverter"/>
+    <converters:IntToTimesChosenStringConverter x:Key="IntToTimesChosenStringConverter"/>
 
 </ResourceDictionary>
