--- a/Mde.Mvvm.StudentRoulette/AppShell.xaml
+++ b/Mde.Mvvm.StudentRoulette/AppShell.xaml
@@ -4,16 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Mde.Mvvm.StudentRoulette.Pages"
-    Shell.FlyoutBehavior="Flyout">
+    Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Students"
         ContentTemplate="{DataTemplate local:StudentListPage}"
         Route="StudentListPage" />
-    
-    <ShellContent
-        Title="Add"
-        ContentTemplate="{DataTemplate local:StudentFormPage}"
-        Route="StudentFormPage" />
 
 </Shell>
